--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js --watch",
     "build": "webpack --config webpack.config.prod.js --prod",
-    "test": "test"
+    "test": "test",
+    "update": "npm i @robotlegsjs/core@latest @robotlegsjs/phaser@latest @robotlegsjs/pixi@latest @tensorflow/tfjs@latest",
+    "deploy": ""
   },
   "repository": {
     "type": "git",
@@ -19,20 +21,20 @@
   },
   "homepage": "https://github.com/Izzaki/tensor-arena#readme",
   "dependencies": {
-    "@robotlegsjs/core": "^0.2.1",
-    "@robotlegsjs/phaser": "^0.4.0",
-    "@robotlegsjs/pixi": "^0.2.0",
-    "@tensorflow/tfjs": "^0.13.3",
-    "phaser": "^3.15.1",
-    "pixi.js": "^4.8.2",
-    "reflect-metadata": "^0.1.12"
+    "@robotlegsjs/core": "^1.0.1",
+    "@robotlegsjs/phaser": "^1.0.1",
+    "@robotlegsjs/pixi": "^1.0.0",
+    "@tensorflow/tfjs": "^1.1.2",
+    "phaser": "^3.17.0",
+    "pixi.js": "^4.8.7",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/pixi.js": "^4.8.2",
-    "ts-loader": "^5.2.2",
-    "typescript": "^3.1.4",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@types/pixi.js": "^4.8.7",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
