--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js --watch",
+    "start": "webpack serve --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js --prod",
-    "test": "test",
-    "update": "npm i @robotlegsjs/core@latest @robotlegsjs/phaser@latest @robotlegsjs/pixi@latest @tensorflow/tfjs@latest",
-    "deploy": ""
+    "update": "npm i @robotlegsjs/core@latest @robotlegsjs/phaser@latest @robotlegsjs/pixi@latest @tensorflow/tfjs@latest phaser@latest",
+    "deploy": "npm run build && firebase deploy --only hosting:tensor-arena"
   },
   "repository": {
     "type": "git",
@@ -21,20 +20,17 @@
   },
   "homepage": "https://github.com/Izzaki/tensor-arena#readme",
   "dependencies": {
-    "@robotlegsjs/core": "^1.0.1",
-    "@robotlegsjs/phaser": "^1.0.1",
-    "@robotlegsjs/pixi": "^1.0.0",
-    "@tensorflow/tfjs": "^1.1.2",
-    "phaser": "^3.17.0",
-    "pixi.js": "^4.8.7",
+    "@robotlegsjs/core": "^2.0.0",
+    "@robotlegsjs/phaser": "^3.0.0",
+    "@tensorflow/tfjs": "^1.7.4",
+    "phaser": "^3.50.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/pixi.js": "^4.8.7",
-    "ts-loader": "^5.4.5",
-    "typescript": "^3.4.5",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
