--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js --prod",
+    "build": "webpack --config webpack.config.prod.js",
     "update": "npm i @robotlegsjs/core@latest @robotlegsjs/phaser@latest @robotlegsjs/pixi@latest @tensorflow/tfjs@latest phaser@latest",
     "deploy": "npm run build && firebase deploy --only hosting:tensor-arena"
   },
